--- a/projects/integrate/center/work/work.component.scss
+++ b/projects/integrate/center/work/work.component.scss
@@ -12,3 +12,26 @@
 .details {
   padding: 12px 16px 0;
 }
+
+.project {
+  height: 160px;
+}
+
+.project-title {
+  padding-bottom: 12px;
+
+  span {
+    margin-left: 12px;
+    font-weight: bold;
+  }
+}
+
+.project-footer {
+  span {
+    float: right;
+  }
+}
+
+.group-name {
+  margin-left: 8px;
+}
