--- a/projects/integrate/admin/application/functions/cloud/cloud.component.html
+++ b/projects/integrate/admin/application/functions/cloud/cloud.component.html
@@ -31,6 +31,28 @@
           </ng-container>
         </nz-list-item-extra>
       </nz-list-item>
+      <nz-list-item>
+        <nz-list-item-meta>
+          <nz-list-item-meta-title>
+            <img height="20px" [src]="['assets', 'cloud', 'aliyun.png'] | wpxAssets" alt="" />
+          </nz-list-item-meta-title>
+          <nz-list-item-meta-description>当前未关联阿里云平台</nz-list-item-meta-description>
+        </nz-list-item-meta>
+        <nz-list-item-extra>
+          <button nz-button nzType="link" disabled> 关联 </button>
+        </nz-list-item-extra>
+      </nz-list-item>
+      <nz-list-item>
+        <nz-list-item-meta>
+          <nz-list-item-meta-title>
+            <img height="30px" [src]="['assets', 'cloud', 'huaweicloud.svg'] | wpxAssets" alt="" />
+          </nz-list-item-meta-title>
+          <nz-list-item-meta-description>当前未关联华为云平台</nz-list-item-meta-description>
+        </nz-list-item-meta>
+        <nz-list-item-extra>
+          <button nz-button nzType="link" disabled> 关联 </button>
+        </nz-list-item-extra>
+      </nz-list-item>
     </nz-list>
   </nz-list>
 
