--- a/projects/integrate/admin/application/functions/office/office.component.html
+++ b/projects/integrate/admin/application/functions/office/office.component.html
@@ -42,6 +42,38 @@
           </ng-container>
         </nz-list-item-extra>
       </nz-list-item>
+      <nz-list-item>
+        <nz-list-item-meta>
+          <nz-list-item-meta-avatar>
+            <nz-avatar
+              nzShape="square"
+              nzSize="large"
+              [nzSrc]="['assets', 'office', 'work-weixin.png'] | wpxAssets"
+            ></nz-avatar>
+          </nz-list-item-meta-avatar>
+          <nz-list-item-meta-title><b>企业微信</b></nz-list-item-meta-title>
+          <nz-list-item-meta-description>当前未关联企业微信</nz-list-item-meta-description>
+        </nz-list-item-meta>
+        <nz-list-item-extra>
+          <button nz-button nzType="link" disabled> 关联 </button>
+        </nz-list-item-extra>
+      </nz-list-item>
+      <nz-list-item>
+        <nz-list-item-meta>
+          <nz-list-item-meta-avatar>
+            <nz-avatar
+              nzShape="square"
+              nzSize="large"
+              [nzSrc]="['assets', 'office', 'dingtalk.png'] | wpxAssets"
+            ></nz-avatar>
+          </nz-list-item-meta-avatar>
+          <nz-list-item-meta-title><b>钉钉</b></nz-list-item-meta-title>
+          <nz-list-item-meta-description>当前未关联钉钉</nz-list-item-meta-description>
+        </nz-list-item-meta>
+        <nz-list-item-extra>
+          <button nz-button nzType="link" disabled> 关联 </button>
+        </nz-list-item-extra>
+      </nz-list-item>
     </nz-list>
   </nz-list>
 
