--- a/projects/integrate/admin/admin.component.html
+++ b/projects/integrate/admin/admin.component.html
@@ -11,6 +11,9 @@
             <li nz-menu-item nzMatchRouter [routerLink]="['application', 'functions']">
               <i nz-icon nzType="switcher"></i> <span>功能模块</span>
             </li>
+            <li nz-menu-item nzMatchRouter [routerLink]="['application', 'monitor']">
+              <i nz-icon nzType="monitor"></i> <span>监控</span>
+            </li>
           </ul>
         </li>
         <li nz-menu-group nzTitle="媒体">
