--- a/projects/integrate/admin/application/factory/tabs/tabs.component.html
+++ b/projects/integrate/admin/application/factory/tabs/tabs.component.html
@@ -2,20 +2,16 @@
   <nz-card-tab>
     <nz-tabset nzLinkRouter [nzAnimated]="false" [nzTabBarExtraContent]="extra">
       <nz-tab>
-        <a *nzTabLink nz-tab-link [routerLink]="['/admin', 'application', 'factory', pages.id, 'schema']"> 内容模型 </a>
+        <a *nzTabLink nz-tab-link [routerLink]="['/admin', 'application', 'factory', id, 'schema']"> 内容模型 </a>
       </nz-tab>
       <nz-tab>
-        <a *nzTabLink nz-tab-link [routerLink]="['/admin', 'application', 'factory', pages.id, 'indexes']">
-          索引规则
-        </a>
+        <a *nzTabLink nz-tab-link [routerLink]="['/admin', 'application', 'factory', id, 'indexes']"> 索引规则 </a>
       </nz-tab>
       <nz-tab>
-        <a *nzTabLink nz-tab-link [routerLink]="['/admin', 'application', 'factory', pages.id, 'rules']"> 显隐规则 </a>
+        <a *nzTabLink nz-tab-link [routerLink]="['/admin', 'application', 'factory', id, 'rules']"> 显隐规则 </a>
       </nz-tab>
       <nz-tab>
-        <a *nzTabLink nz-tab-link [routerLink]="['/admin', 'application', 'factory', pages.id, 'advanced']">
-          高级设置
-        </a>
+        <a *nzTabLink nz-tab-link [routerLink]="['/admin', 'application', 'factory', id, 'advanced']"> 高级设置 </a>
       </nz-tab>
     </nz-tabset>
   </nz-card-tab>
