--- a/projects/integrate/admin/application/factory/indexes/indexes.component.html
+++ b/projects/integrate/admin/application/factory/indexes/indexes.component.html
@@ -2,10 +2,10 @@
   <button nz-button nzType="primary" (click)="form()"> 新增 </button>
 </ng-template>
 
-<wpx-admin-factory-tabs [extra]="extra">
+<wpx-admin-factory-tabs [id]="id" [extra]="extra">
   <nz-table
     #contentTable
-    [nzData]="data"
+    [nzData]="indexes"
     [nzFrontPagination]="false"
     [nzShowPagination]="false"
     [nzScroll]="{ x: '1200px' }"
