--- a/projects/integrate/admin/application/factory/schema/form/form.component.html
+++ b/projects/integrate/admin/application/factory/schema/form/form.component.html
@@ -33,7 +33,7 @@
         <nz-form-label nzRequired>字段类型</nz-form-label>
         <nz-form-control>
           <nz-select nzShowSearch nzAllowClear formControlName="type" nzPlaceHolder="请选择一个字段类型">
-            <ng-container *ngFor="let x of typeList">
+            <ng-container *ngFor="let x of fieldTypes">
               <nz-option-group [nzLabel]="x['label']">
                 <ng-container *ngFor="let y of x['values']">
                   <nz-option [nzLabel]="y[1]" [nzValue]="y[0]"></nz-option>
@@ -66,7 +66,7 @@
       <nz-form-item>
         <nz-form-label nzRequired>关键词</nz-form-label>
         <nz-form-control nzExtra="表格搜索的通用条件">
-          <nz-switch formControlName="keyword"></nz-switch>
+          <nz-switch formControlName="keyword" [nzDisabled]="page.manifest !== 'default'"></nz-switch>
         </nz-form-control>
       </nz-form-item>
       <nz-form-item>
@@ -98,9 +98,9 @@
         </nz-form-control>
       </nz-form-item>
     </nz-col>
-    <nz-col *ngIf="optionPanel" [nzSpan]="24" formGroupName="option">
+    <nz-col *ngIf="visibleOption" [nzSpan]="24" formGroupName="option">
       <nz-divider nzText="高级设置" nzOrientation="left" nzPlain></nz-divider>
-      <nz-row [nzGutter]="24" [ngSwitch]="currentType">
+      <nz-row [nzGutter]="24" [ngSwitch]="type">
         <ng-container *ngSwitchCase="'number'">
           <nz-col [nzSpan]="12">
             <nz-form-item>
@@ -217,7 +217,7 @@
                   [nzAutocomplete]="autoReferences"
                 />
                 <nz-autocomplete #autoReferences>
-                  <ng-container *ngFor="let x of referenceList">
+                  <ng-container *ngFor="let x of references">
                     <nz-auto-option [nzValue]="x.schema!.key"> {{ x.name }} [{{ x.schema!.key }}] </nz-auto-option>
                   </ng-container>
                 </nz-autocomplete>
