fix：内容模型、索引规则、高级设置

--- a/projects/integrate/admin/application/factory/advanced/advanced.component.html
+++ b/projects/integrate/admin/application/factory/advanced/advanced.component.html
@@ -10,7 +10,7 @@
         <nz-switch formControlName="event"></nz-switch>
       </nz-form-control>
     </nz-form-item>
-    <nz-form-item *ngIf="manifest === 'default'">
+    <nz-form-item>
       <nz-form-label nzRequired>启用详情</nz-form-label>
       <nz-form-control>
         <nz-switch formControlName="detail"></nz-switch>
