--- a/projects/integrate/admin/application/factory/rules/rules.component.html
+++ b/projects/integrate/admin/application/factory/rules/rules.component.html
@@ -13,18 +13,36 @@
     <thead>
       <tr>
         <th nzWidth="50px" nzLeft nzAlign="center"> </th>
-        <th nzWidth="200px" nzLeft><b>逻辑</b></th>
+        <th nzWidth="240px" nzLeft><b>显示字段</b></th>
         <th><b>条件</b></th>
-        <th><b>显示字段</b></th>
         <th nzWidth="50px" nzRight nzAlign="center"><b>操作</b></th>
       </tr>
     </thead>
     <tbody>
       <tr *ngFor="let data of contentTable.data; index as i">
-        <td nzLeft nzAlign="center"> </td>
-        <td>{{ data.logic }}</td>
-        <td>{{ data.conditions }} </td>
-        <td>{{ data.keys }}</td>
+        <td nzLeft nzAlign="center">
+          <nz-tag nzColor="blue">
+            <ng-container [ngSwitch]="data.logic">
+              <ng-container *ngSwitchCase="'and'">所有</ng-container>
+              <ng-container *ngSwitchCase="'or'">任一</ng-container>
+            </ng-container>
+          </nz-tag>
+        </td>
+        <td nzLeft>{{ data.keys }}</td>
+        <td>
+          <ng-container *ngFor="let x of data.conditions">
+            <nz-tag>
+              {{ x.key }}
+              <ng-container [ngSwitch]="x.operate">
+                <ng-container *ngSwitchCase="'eq'">等于</ng-container>
+                <ng-container *ngSwitchCase="'ne'">不等于</ng-container>
+                <ng-container *ngSwitchCase="'in'">包含</ng-container>
+                <ng-container *ngSwitchCase="'nin'">不包含</ng-container>
+              </ng-container>
+              {{ x.value }}
+            </nz-tag>
+          </ng-container>
+        </td>
         <td nzRight nzAlign="center">
           <button
             nz-button
