--- a/projects/integrate/admin/organize/roles/form/form.component.html
+++ b/projects/integrate/admin/organize/roles/form/form.component.html
@@ -1,4 +1,4 @@
-<form *ngIf="form" nz-form nzLayout="vertical" id="form" [formGroup]="form" (wpxSubmit)="submit($event)">
+<form nz-form nzLayout="vertical" id="form" [formGroup]="form" (wpxSubmit)="submit($event)">
   <nz-form-item>
     <nz-form-label nzRequired>权限名称</nz-form-label>
     <nz-form-control
