--- a/projects/integrate/admin/organize/users/users.component.html
+++ b/projects/integrate/admin/organize/users/users.component.html
@@ -14,7 +14,7 @@
         </button>
         <nz-dropdown-menu #menu="nzDropdownMenu">
           <ul nz-menu>
-            <li nz-menu-item (click)="department(data)">设置部门</li>
+            <li nz-menu-item (click)="setDepartment(data)">设置部门</li>
             <li nz-menu-item (click)="form(data)">编辑</li>
             <li nz-menu-item nzDanger (click)="delete(data)">删除</li>
           </ul>
