--- a/projects/integrate/admin/organize/departments/departments.component.html
+++ b/projects/integrate/admin/organize/departments/departments.component.html
@@ -1,6 +1,15 @@
 <nz-row [nzGutter]="8">
   <nz-col>
-    <nz-input-group nzSuffixIcon="search" style="width: 180px">
+    <button
+      style="margin-right: 8px"
+      nz-button
+      nzType="text"
+      [nz-tooltip]="expand ? '收起' : '展开'"
+      (click)="expanded()"
+    >
+      <i nz-icon [nzType]="expand ? 'node-collapse' : 'node-expand'"></i>
+    </button>
+    <nz-input-group nzSuffixIcon="search" style="width: 150px">
       <input type="text" nz-input placeholder="搜索" [(ngModel)]="searchText" />
     </nz-input-group>
   </nz-col>
@@ -9,11 +18,11 @@
       <button nz-button nzType="text" nz-tooltip="刷新" (click)="getData()">
         <i nz-icon nzType="reload"></i>
       </button>
-      <button nz-button nzType="text" [nz-tooltip]="expand ? '收起' : '展开'" (click)="expanded()">
-        <i nz-icon [nzType]="expand ? 'node-collapse' : 'node-expand'"></i>
-      </button>
       <button nz-button nzType="text" nz-tooltip="新增" (click)="form()">
-        <i nz-icon nzType="sisternode" nzTheme="outline"></i>
+        <i nz-icon nzType="sisternode"></i>
+      </button>
+      <button nz-button nzType="text" nz-tooltip="重组" (click)="openReorganization()">
+        <i nz-icon nzType="swap"></i>
       </button>
     </nz-button-group>
   </nz-col>
@@ -23,22 +32,31 @@
   #tree
   nzBlockNode
   nzExpandAll
-  nzDraggable
   nzShowLine
   [nzData]="nodes"
   [nzSearchValue]="searchText"
   [nzExpandedIcon]="nzExpandedIcon"
+  [nzTreeTemplate]="nzTreeTemplate"
   [nzSelectedKeys]="selectedKeys"
   (nzClick)="selected($event)"
   (nzContextMenu)="actions($event, treeActions)"
-  (nzOnDrop)="drop($event)"
 >
   <ng-template #nzExpandedIcon let-node>
-    <i nz-icon [nzType]="!node.isExpanded && !node.isLeaf ? 'folder' : 'folder-open'"></i>
+    <span class="custom-icon">
+      <i nz-icon [nzType]="!node.isExpanded && !node.isLeaf ? 'folder' : 'folder-open'" nzTheme="twotone"></i>
+    </span>
+  </ng-template>
+  <ng-template #nzTreeTemplate let-node let-origin="origin">
+    <span class="custom-node">
+      <span>{{ node.title }}</span>
+      <ng-container *ngIf="origin['description']">
+        <i nz-icon nzType="bulb" [nz-tooltip]="origin['description']"></i>
+      </ng-container>
+    </span>
   </ng-template>
   <nz-dropdown-menu #treeActions="nzDropdownMenu">
-    <ul *ngIf="actionKey" nz-menu>
-      <ng-container *ngIf="departments.dict?.[actionKey] as department">
+    <ul *ngIf="actionId" nz-menu>
+      <ng-container *ngIf="departments.dict?.[actionId] as department">
         <li nz-menu-item (click)="form(undefined, department._id)"> 新增 </li>
         <li nz-menu-item (click)="form(department)"> 编辑 </li>
         <li nz-menu-item nzDanger (click)="delete(department)"> 删除 </li>
@@ -46,3 +64,17 @@
     </ul>
   </nz-dropdown-menu>
 </nz-tree>
+
+<nz-drawer nzTitle="拖拽进行重组" [nzVisible]="reorganizationVisible" (nzOnClose)="closeReorganization()">
+  <ng-container *nzDrawerContent>
+    <nz-tree
+      nzBlockNode
+      nzExpandAll
+      nzShowLine
+      nzDraggable
+      [nzData]="reorganizationNodes"
+      (nzOnDrop)="reorganization($event)"
+    >
+    </nz-tree>
+  </ng-container>
+</nz-drawer>
