--- a/projects/integrate/admin/organize/departments/form/form.component.html
+++ b/projects/integrate/admin/organize/departments/form/form.component.html
@@ -1,4 +1,4 @@
-<form *ngIf="form" nz-form nzLayout="vertical" id="form" [formGroup]="form" (wpxSubmit)="submit($event)">
+<form nz-form nzLayout="vertical" id="form" [formGroup]="form" (wpxSubmit)="submit($event)">
   <nz-form-item>
     <nz-form-label nzRequired>部门名称</nz-form-label>
     <nz-form-control
@@ -17,8 +17,7 @@
     <nz-form-label>上级部门</nz-form-label>
     <nz-form-control nzHasFeedback>
       <nz-tree-select
-        *ngIf="parentNodes"
-        [nzNodes]="parentNodes"
+        [nzNodes]="nodes"
         nzShowSearch
         formControlName="parent"
         nzPlaceHolder="默认最高级"
