--- a/projects/integrate/dynamic/form/form.component.html
+++ b/projects/integrate/dynamic/form/form.component.html
@@ -1,9 +1,3 @@
 <nz-card>
-  <wpx-form
-    #wpxForm
-    [wpxFields]="fields"
-    [wpxRules]="rules"
-    [wpxSubmit]="submit"
-    (wpxInit)="formInit($event)"
-  ></wpx-form>
+  <wpx-form [wpxFields]="fields" [wpxRules]="rules" [wpxSubmit]="submit" (wpxInit)="formInit($event)"></wpx-form>
 </nz-card>
